Mass update to v0.4hotfix4 (refresh)

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-IMPORTANT: The custom recovery code has not been tested! Flashing the recovery image to your device may result in a bricked phone.
+IMPORTANT: Recovery has not been tested. You will probably brick your phone if you try to flash it.
