README: Add thanks to a few people

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 CyanogenMod device configuration for the Samsung Galaxy 5 (GT-I5500)
 
 By psyke83
+
+Thanks to ac1953, OuNao, motafoca, DSM and all patient testers ;)
